Final Formspree integration with proper endpoint
- Update form action to use actual Formspree endpoint: f/xanprypo
- Revert email field back to standard 'email' name
- Fix JavaScript validation to match updated field names
- Contact form now fully configured with user's Formspree account

--- a/index.html
+++ b/index.html
@@ -414,14 +414,14 @@
                 </div>
                 
                 <div class="contact-form-container">
-                    <form class="contact-form" action="https://formspree.io/mohd.vaseem@hotmail.com" method="POST">
+                    <form class="contact-form" action="https://formspree.io/f/xanprypo" method="POST">
                         <div class="form-group">
                             <label for="name">Full Name</label>
                             <input type="text" id="name" name="name" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Email Address</label>
-                            <input type="email" id="email" name="_replyto" required>
+                            <input type="email" id="email" name="email" required>
                         </div>
                         <div class="form-group">
                             <label for="company">Company</label>
@@ -448,7 +448,6 @@
                         <!-- Hidden fields for better email formatting -->
                         <input type="hidden" name="_subject" value="New Portfolio Inquiry from mohammedabdulvaseem.me">
                         <input type="hidden" name="_next" value="https://mohammedabdulvaseem.me/thank-you.html">
-                        <input type="hidden" name="_format" value="plain">
                         
                         <button type="submit" class="btn btn-primary btn-full">Send Message</button>
                     </form>
