--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <p class="job-location">Dubai, UAE</p>
                         <ul class="job-highlights">
                             <li><strong>Digital Transformation Leadership:</strong> Led complete organizational migration from on-premises Active Directory to cloud-based Entra ID</li>
-                            <li><strong>Team Management:</strong> Lead and develop team of 6 IT professionals (4 Level 2, 2 Level 1 specialists)</li>
+                            <li><strong>Team Management:</strong> Lead and develop team of 6 IT professionals (all Level 2 specialists)</li>
                             <li><strong>Process Automation:</strong> Eliminated paper-based workflows through PowerApps and Power Automate implementations</li>
                             <li><strong>Infrastructure Operations:</strong> Direct comprehensive datacenter operations serving 650+ users across 5 locations</li>
                         </ul>
