--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="contact-card">
                         <div class="contact-icon">📧</div>
                         <h3>Email</h3>
-                        <p><a href="mailto:contact@mohammedabdulvaseem.me">contact@mohammedabdulvaseem.me</a></p>
+                        <p><a href="mailto:mohd.vaseem@hotmail.com">mohd.vaseem@hotmail.com</a></p>
                         <p><a href="mailto:mohd.vaseem@hotmail.com">mohd.vaseem@hotmail.com</a></p>
                     </div>
                     <div class="contact-card">
@@ -486,7 +486,7 @@
                     <div class="footer-section">
                         <h4>Contact</h4>
                         <ul>
-                            <li><a href="mailto:contact@mohammedabdulvaseem.me">Email</a></li>
+                            <li><a href="mailto:mohd.vaseem@hotmail.com">Email</a></li>
                             <li><a href="tel:+971563656846">Phone</a></li>
                             <li><a href="#contact">Get In Touch</a></li>
                         </ul>
