Add missing Knoah Solutions experience to timeline
Complete Professional Experience (Sep 2014 – Jul 2015):
- Position: Technical Support at Knoah Solutions, Hyderabad, India
- Key achievements: 24x7 Samsung product support, customer resolution excellence
- Skills: Customer service, problem-solving, process improvement, team support
- Timeline now shows complete career progression from 2014 to present
- Maintains chronological order and professional presentation

--- a/index.html
+++ b/index.html
@@ -187,6 +187,22 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content">
+                        <div class="job-period">Sep 2014 – Jul 2015</div>
+                        <h3 class="job-title">Technical Support</h3>
+                        <h4 class="company-name">Knoah Solutions</h4>
+                        <p class="job-location">Hyderabad, India</p>
+                        <ul class="job-highlights">
+                            <li><strong>Customer Support Excellence:</strong> Provided 24x7 chat support for Samsung products including phones, tablets, printers, and TVs</li>
+                            <li><strong>Problem Resolution:</strong> Effectively addressed customer queries through systematic understanding of customer challenges and expectations</li>
+                            <li><strong>Process Improvement:</strong> Documented customer dissatisfaction patterns and upgraded product knowledge to meet resolution standards</li>
+                            <li><strong>Team Development:</strong> Supported fellow team members in meeting performance standards and maintained flexible rotational shift schedules</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
